Mon Dec 16 18:07:30 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_objspace_markable_object_p): fix last commit (build error).

Mon Dec 16 18:04:28 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_objspace_markable_object_p): it should be live objects.

Mon Dec 16 18:00:51 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_objspace_each_objects): should not clear dont_lazy_sweep
	  flag in nested case.

Mon Dec 16 16:40:35 2013  Koichi Sasada  <ko1@atdot.net>

	* vm_method.c (rb_method_entry_make): fix WB miss.
	  Note that rb_method_entry_t::klass is not constified.
	  We may  constify this field.

	* test/ruby/test_alias.rb: add a test.

Mon Dec 16 14:14:22 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: use gc_verify_internal_consistency() instead of
	  gc_check_before_marks_i() for check consistency
	  on RGENGC_CHECK_MODE >= 2.

Mon Dec 16 14:01:48 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* process.c (make_clock_result): add :second as a unit for
	  Process.clock_gettime.

Mon Dec 16 13:10:54 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: introduce GC.verify_internal_consistency method to verify GC
	  internal data structure.

	  Now this method only checks generation (old/young) consistency.

Mon Dec 16 11:49:26 2013  Aman Gupta <ruby@tmm1.net>

	* gc.c (gc_info_decode): Fix build errors when compiled with
	  RGENGC_ESTIMATE_OLDMALLOC=0
	* gc.c (objspace_malloc_increase): ditto

Sun Dec 15 13:38:29 2013  Koichi Sasada  <ko1@atdot.net>

	* ext/objspace/objspace.c (reachable_object_from_root_i):
	  reachable objects should not include categories and
	  category_objects because it is noisy information.

	  In fact, objects created after calling
	  ObjectSpace.reachable_objects_from_root should not be included
	  as a returning hash objects. Currently, mswin64 platform has a
	  problem because of this behaviour. Should we trace new objects?

Sun Dec 15 07:09:28 2013  Eric Hodel  <drbrain@segment7.net>
