@@ -1,3 +1,8 @@
+Mon Dec 16 18:16:28 2013  Koichi Sasada  <ko1@atdot.net>
+
+	* gc.c (gc_verify_internal_consistency): should not use 
+	  rb_objspace_each_objects() because it call rest_sweep().
+
 Mon Dec 16 18:07:30 2013  Koichi Sasada  <ko1@atdot.net>
 
 	* gc.c (rb_objspace_markable_object_p): fix last commit (build error).
